# zilliqa

./: CMakeLists.txt  build.sh
src/cmd/: CMakeLists.txt
src/libCrypto/: CMakeLists.txt
src/libMessage/: CMakeLists.txt
src/libMetrics/: CMakeLists.txt
src/libPersistence/: CMakeLists.txt
src/libRemoteStorageDB/: CMakeLists.txt
src/libUtils/: CMakeLists.txt
tests/Node/: pre_run.sh
